<resources>

    <!-- region App Name -->
    <string name="app_name">swap</string>
    <!-- endregion -->

    <!-- region Keypad -->
    <string name="keypad_nine">9</string>
    <string name="keypad_eight">8</string>
    <string name="keypad_seven">7</string>
    <string name="keypad_six">6</string>
    <string name="keypad_five">5</string>
    <string name="keypad_four">4</string>
    <string name="keypad_three">3</string>
    <string name="keypad_two">2</string>
    <string name="keypad_one">1</string>
    <string name="keypad_zero">0</string>
    <string name="keypad_decimal">.</string>
    <!-- endregion -->

    <!-- region Currency Selection -->
    <string name="currency_selection_title">Select currency</string>
    <string name="currency_selection_search_hint">Search currency</string>
    <!-- endregion -->

    <!-- region Currency Display -->
    <string name="currency_display_placeholder_value">0</string>
    <!-- endregion -->

</resources>
